# rude

./: Cargo.toml  LICENSE  README.md  rude.nix
src/: lib.rs  main.rs
src/cli/: mod.rs
src/engine/: chunk.rs  config.rs  io.rs  manager.rs  mirror.rs  mod.rs  scheduler.rs  session.rs  speed.rs  task.rs  worker.rs
src/proto/: mod.rs  types.rs
src/rpc/: mod.rs  server.rs
tests/: engine_tests.rs
